# py-slack-logger

./: CODEOWNERS  LICENSE  Pipfile  pyproject.toml
.github/: dependabot.yml
.github/actions/setup_poetry/: action.yml
.github/workflows/: lint.yml  release.yml
slack_logger/: message_logger.py
