[project]
name = "py-slack-logger"
version = "1.0.3"
description = "Slack Logger is a custom message logger to Slack for Python 3"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
  "slack-sdk~=3.41",
  "pyyaml~=6.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Chat",
]

[dependency-groups]
dev = [
    "ruff~=0.15.12"
]

[project.urls]
Homepage = "https://pypi.org/project/py-slack-logger/"
Issues = "https://github.com/Kayenta/py-slack-logger/issues"
Source = "https://github.com/Kayenta/py-slack-logger"

[build-system]
requires = ["uv_build~=0.11.10"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "slack_logger"
module-root = ""

[tool.ruff.lint]
select = ["F", "E", "W", "C90", "I", "N", "UP", "ASYNC", "T20", "TC"]
